--- a/src/components/profile/profile.style.css
+++ b/src/components/profile/profile.style.css
@@ -1,10 +1,11 @@
 .Container {
-    width: 100%;
-    min-height: 100px;
+    width: 40%;
+    min-height: 50px;
     padding: 20px;
+    margin-left: 28%;
+    padding-left: 58px;
     margin-top: 50px;
     border: 1px solid #ddd;
-    position: center;
 }
 
 .Bio {
@@ -34,6 +35,7 @@
 
 .Skills ul {
     list-style-type: none;
+    padding: 0;
 }
 
 .Skills ul li {
@@ -56,6 +58,7 @@
 
 .Links ul {
     list-style-type: none;
+    padding: 0;
 }
 
 .Links ul li {
